# edge-inference-project

./: .coverage  .gitignore  Colab_Runner.ipynb  README.md  complete_context.md  edge_cv_hub_analysis.md  hil-test.yml  requirements.txt  test_pipeline.py
.github/workflows/: ci.yml
benchmark/: gate.py  runner.py
compressor/: distiller.py  pipeline.py  pruner.py  quantizer.py
configs/: config.yaml  settings.py
dashboard/: app.py
docker/: Dockerfile.inference
inference/: CMakeLists.txt
inference/src/: main.cpp
tests/: test_units.py
tests/extended/: test_e2e_suites.py  test_edge_cases.py  test_exhaustive_audit.py  test_logic.py  test_official_parity.py
